Fixes #RHINENG-24126 - new colums for ordering
